# top_teachers

./: .gitignore  Makefile  README.md  docker-compose-dev.yaml  docker-compose-kafka-postgre.yaml  docker-compose.yaml
exercises_service/: .env.example  Dockerfile  __main__.py  alembic.ini  app_globals.py  environment.py  pyproject.toml  test.py
exercises_service/alembic/versions/: 001_create_roles_table.py  002_create_exercises_table.py  003_create_users_table.py  004_create_candidates_table.py  005_create_assignment_table.py  04_create_candidates_table.py  05_create_assignment_table.py
exercises_service/api/: config.py  consumer.py
exercises_service/api/models/: assigments.py  candidate.py  exercise.py  roles.py  user.py
exercises_service/api/repos/: postgre.py
exercises_service/api/rest/: app.py  candidates.py  dependencies.py  exercises.py  users.py
exercises_service/kafka/: config.py  consumer.py  producer.py
exercises_service/repos/: controllers.py  postgre.py  repo.py
exercises_service/repos/models/: assigment.py  candidate.py  exercise.py  user.py
hiring_service/: .env.example  Dockerfile  __main__.py  alembic.ini  app_globals.py  logs.py  pyproject.toml
hiring_service/alembic/versions/: 001_create_candidates_table.py  002_create_exercises_table.py  003_create_assigments_table.py
hiring_service/api/: consumer.py
hiring_service/api/models/: candidate.py  (+1 more)
hiring_service/kafka/: producer.py
hiring_service/repos/: config.py  controllers.py  postgre.py  repo.py
hiring_service/scripts/: run_migrations.sh
init_db/: 001-create-database.sql
(+6 files in other folders)
